After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791251 - gldownload: fix wrong enum
gldownload: fix wrong enum
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-12-05 09:40 UTC by Víctor Manuel Jáquez Leal
Modified: 2017-12-05 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gldownload: fix wrong enum (1.16 KB, patch)
2017-12-05 09:40 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2017-12-05 09:40:48 UTC
When compiling with clang, an enum conversion error is triggered
since GstVideoFrameFlags are not GstVideoFlags.

This patch sets GST_VIDEO_FRAME_FLAG_NONE to the added video meta.
Comment 1 Víctor Manuel Jáquez Leal 2017-12-05 09:40:54 UTC
Created attachment 365006 [details] [review]
gldownload: fix wrong enum
Comment 2 Nicolas Dufresne (ndufresne) 2017-12-05 14:30:22 UTC
Review of attachment 365006 [details] [review]:

This is correct.
Comment 3 Víctor Manuel Jáquez Leal 2017-12-05 17:13:49 UTC
Attachment 365006 [details] pushed as 3937ed9 - gldownload: fix wrong enum